Add container logs to logstash container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,7 @@ services:
     volumes:
       - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro,Z
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro,Z
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
     ports:
       - 5044:5044
       - 50000:50000/tcp
