--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -6,14 +6,30 @@ input {
 	tcp {
 		port => 50000
 	}
+	file {
+		path => "/var/lib/docker/containers/*/*.log"
+		start_position => "beginning"
+		sincedb_path => "/dev/null" # Ensures Logstash always starts reading from the beginning
+		codec => "json" # Docker logs are in JSON format
+		type => "docker"
+	}
 }
-
-## Add your filters / logstash plugins configuration here
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		index => "docker-logs-%{+YYYY.MM.dd}"
 	}
+}
+
+filter {
+  json {
+    source => "message"
+    target => "docker"
+  }
+  mutate {
+    remove_field => ["message"]
+  }
 }
