Add index and use data_stream

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -20,6 +20,8 @@ output {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		index => "docker-logs"
+		data_stream => true 
 	}
 }
 
