--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -20,7 +20,8 @@ output {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
-		data_stream => true 
+		index => "docker-logs-%{+YYYY.MM.dd}"
+		data_stream => false
 	}
 }
 
