--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,18 @@ services:
       - elasticsearch
     restart: unless-stopped
 
+  filebeat:
+    image: "docker.elastic.co/beats/filebeat:8.15.3"
+    user: root
+    environment:
+      FILEBEAT_INTERNAL_PASSWORD: ${FILEBEAT_INTERNAL_PASSWORD:-}
+    volumes:
+      - ./filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - elasticsearch
+
 networks:
   elk:
     driver: bridge
